objects/API_Configuration__c.object
<CustomObject>
    <fields>
        <fullName>ApiName__c</fullName>
        <label>ApiName</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Value__c</fullName>
        <label>Default Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieldType__c</fullName>
        <label>FieldType</label>
        <picklist>
            <picklistValues>
                <fullName>Text</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Picklist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decimal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boolean</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ObjectName__c</fullName>
        <label>ObjectName</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PropertyName__c</fullName>
        <label>PropertyName</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ValidationMessage__c</fullName>
        <label>ValidationMessage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ValidationRule__c</fullName>
        <label>ValidationRule</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isRequired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isUnique__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isUnique</label>
        <type>Checkbox</type>
    </fields>
    <label>API Configuration</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>PropertyName__c</columns>
        <columns>ValidationRule__c</columns>
        <columns>ApiName__c</columns>
        <columns>FieldType__c</columns>
        <columns>isRequired__c</columns>
        <columns>ValidationMessage__c</columns>
        <columns>ObjectName__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>API Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>API Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>